src_files = files(
    'game/game.cpp',
    'engine/graphics/cubemaps.cpp',
    'engine/graphics/framebuffer.cpp',
    'engine/graphics/shaders.cpp',
    'engine/graphics/stb_entrypoint.cpp',
    'engine/graphics/textures.cpp',
    'engine/core.cpp',
    'engine/input.cpp',
    'game/control.cpp',
    'game/demoChunkGen.cpp',
    'game/shaders.cpp'
)